# fast-api-terraform-app

./: .dockerignore  .flake8  .gitignore  .pylintrc  Dockerfile  Makefile  Procfile  README.md  app.json  ipython.py  prestart.sh  pyproject.toml  setup.cfg
.github/workflows/: app.yml
app/: application.py  main.py  prestart.sh  server.py
app/cross/: db.py  security.py
app/db/: base_class.py  loader.py  session.py
app/models/api/: base.py  candidate.py  job.py  product.py  transaction.py  transaction_item.py  user.py
app/models/orm/: base.py  candidate.py  job.py  product.py  transaction.py  transaction_item.py  user.py
app/repositories/: __init__.py  base.py  candidate.py  exceptions.py  job.py  product.py  transaction.py  transaction_item.py  user.py
app/routes/: health.py  utils.py
app/routes/v1/: __init__.py  candidate.py  job.py  products.py  transactions.py
app/services/: request.py
app/services/api/: __init__.py  candidate.py  job.py  pagination.py  product.py  transaction.py
app/settings/: globals.py
app/utils/: __init__.py  log.py
compose/: docker-compose.yml
migrations/: env.py
migrations/versions/: 1d4d89986dc4_create_tables.py  b13c53d0fe24_adding_new_tables.py  b7341836c6f0_add_users.py  e5c836cebbd7_init.py
terraform/: data.tf  deploy-diagram  dev.auto.tfvars  dev.tfvars  locals.tf  main.tf  provider.tf  terraform.tf  variables.tf
terraform/modules/cognito/: main.tf  variables.tf
terraform/modules/ecs/: alb.tf  main.tf  (+3 more)
tests/: conftest.py
tests/services/: products_test.py  test_candidate.py  transaction_test.py
(+16 files in other folders)
