[tool.poetry]
name = "fastapi-base"
version = "0.1.0"
description = ""
authors = ["Spencer Ellinor <zpencerq@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "3.8.2"
fastapi = "^0.54.0"
psycopg2-binary = "^2.8.5"
uvicorn = "^0.11.3"
pyjwt = "^1.7.1"
gunicorn = "^20.0.4"
pydantic = "^1.4"
alembic = "^1.4.2"
sqlalchemy = "^1.3.16"
python-multipart = "^0.0.5"
mypy_extensions = "^0.4.3"
typing_extensions = "^3.7.4"
httpx = "^0.12.1"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
python-jose = "^3.2.0"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
black = "^19.10b0"
isort = "^4.3.21"
pytest = "^5.4.1"
sqlalchemy-stubs = "^0.3"
devtools = "^0.5.1"
pylint = "^2.4.4"
honcho = "^1.0.1"
flake8 = "^3.7.9"
requests = "^2.23.0"
fire = "^0.3.1"
ipython = "^7.13.0"

[tool.black]
target_version = ['py37']
include = '\.pyi?$'
exclude = '''
  (
      venv
    | \.mypy_cache
    | pip-wheel-metadata
    | build
    | dist
  )
'''

[tool.isort]
multi_line_output = 3
indent = 4
force_grid_wrap = 0
line_length = 88
force_single_line = true
include_trailing_comma = true
use_parentheses = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
